[package]
name = "rust-sock"
version = "0.1.0"
authors = ["ACUVE <sub_chon@yahoo.co.jp>"]
edition = "2018"

[[bin]]
name = "daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = "2"
dirs = "3"
